<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name = "question"
            type = "au.net.australiastudy.pilottool.Question"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/questionsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@{question.question}"
            android:textColor="@color/orange"
            android:textColorLink="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="goBack"
            android:text="@string/go_back"
            android:background="#FFB74D"
            android:textColor="#FFF8E1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question" />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/proRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:max="5"
            android:numStars="5"
            android:rating="@{question.rating}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srb_drawBorderEnabled="false"
            app:srb_fillColor="@color/orange"
            app:srb_numberOfStars="5"
            app:srb_pressedStarBackgroundColor="@color/golden_stars"
            app:srb_starBackgroundColor="@color/golden_stars"
            app:srb_starSize="52dp"
            app:srb_starsSeparation="20dp" />

        <TextView
            android:id="@+id/text_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/dislike"
            android:textColor="@color/orange"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/proRating"
            app:layout_constraintStart_toStartOf="@+id/proRating" />

        <TextView
            android:id="@+id/text_neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/neutral"
            android:textColor="@color/orange"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/proRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/like"
            android:textColor="@color/orange"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/proRating"
            app:layout_constraintEnd_toEndOf="@+id/proRating" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>